# ml_study

./: README.md
はじめてのパターン認識/: pyproject.toml
はじめてのパターン認識/2_2_1__bootstrap/: main.py
はじめてのパターン認識/2_2_1__bootstrap/module/: bootstrap.py
