[tool.poetry]
name = "はじめてのパターン認識"
version = "0.1.0"
description = ""
authors = ["tstakeda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
japanize-matplotlib = "^1.1.3"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
